Add panama module to tests